# ml-training-operator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: api.Dockerfile  worker.Dockerfile
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  GKE_DEPLOYMENT.md
k8s/base/: api-deployment.yaml  api-service.yaml  configmap.yaml  controller-deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  rbac.yaml
k8s/base/prometheus/: grafana-dashboard.json  servicemonitor.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/dev/patches/: resource-limits.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/prod/patches/: resource-limits.yaml
k8s/worker/: job-template.yaml
k8s/worker/distributed/: ddp-job-template.yaml  headless-service.yaml
scripts/: deploy_gke.sh  download_nuscenes_mini.sh  teardown_gke.sh
src/api/: app.py  dependencies.py  models.py  routes.py
src/cli/: main.py
src/controller/: job_spec.py  k8s_client.py  manager.py  retry.py
src/metrics/: exporter.py
src/storage/: database.py  models.py
src/worker/: benchmark.py  checkpoint.py  dataset.py  distributed.py  model.py  optimize.py  train.py
tests/: conftest.py
tests/integration/: test_job_lifecycle.py
tests/unit/: test_api.py  test_benchmark.py  test_checkpoint.py  test_database.py  test_distributed.py  test_job_spec.py  test_models.py  test_optimize.py  test_retry.py
